--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,24 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.gradle
+
+### Intellij IDEA ###
+
+*.iml
+*.ipr
+*.iws
+
+.idea/
+.idea_modules/
+
+/out/
+eclipse/
+classes
+*.bat
+
+### Minecraft ###
+/build/
+/run/
+
+libs
