--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 
-mod_version=1.0.0
+mod_version=0.1-alpha-1
 mc_version=1.12.2
 forge_version=14.23.5.2807
 mappings_version=snapshot_20171003
