--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ minecraft {
     
     mappings = "${mappings_version}"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+
+    replace "@VERSION@", project.version
+    replaceIn "AdvancedSolarsClassic.java"
 }
 
 dependencies {
