updated to latest ic2 classic and changed to full gradle dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,14 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url = "https://files.minecraftforge.net/maven" }
+        maven { url = "http://files.minecraftforge.net/maven" }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath "com.wynprice.cursemaven:CurseMaven:2.1.0"
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
@@ -32,6 +36,8 @@ minecraft {
 }
 
 dependencies {
+    compile "curse.maven:baubles:2518667"
+    compile "curse.maven:ic2-classic:2979877"
     compile 'org.jetbrains:annotations:16.0.2'
 
 }
