--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 
-mod_version=1.0.6
+mod_version=1.0.7
 mc_version=1.12.2
 forge_version=14.23.5.2807
 mappings_version=snapshot_20171003
+jei_version=4.14.+
