--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ repositories{
 dependencies {
     runtime "mezz.jei:jei_${mc_version}:${jei_version}"
     compile "curse.maven:baubles-227083:2518667"
-    compile "curse.maven:ic2_classic-242942:2979877"
+    deobfCompile "curse.maven:ic2_classic-242942:4048720"
     compile 'org.jetbrains:annotations:16.0.2'
 
 }
