--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,10 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+loom.platform=forge
 
-mod_version=1.0.7
-mc_version=1.12.2
-forge_version=14.23.5.2807
-mappings_version=snapshot_20171003
-jei_version=4.14.+
+mod_version=2.0.0
+minecraft_version=1.19.2
+mappings_version=2022.10.09
+forge_version=43.1.34
+rei_version=9.1.530
