--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ repositories{
         name = 'parchment'
         url = 'https://maven.parchmentmc.org'
     }
+    maven {
+        // location of the maven that hosts JEI files since January 2023
+        name = "Jared's maven"
+        url = "https://maven.blamejared.com/"
+    }
     maven { url "https://maven.shedaniel.me" }
     maven {
         url "https://cursemaven.com"
@@ -36,8 +41,9 @@ dependencies {
     forge "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     //modImplementation fileTree(include: ['*.jar'], dir: 'libs')
     modImplementation("curse.maven:ic2_classic-242942:4744334")
-    modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-forge:${rootProject.rei_version}"
-    modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-plugin-compatibilities-forge:9.1.530"
+    modImplementation("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
+    //modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-forge:${rootProject.rei_version}"
+    //modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-plugin-compatibilities-forge:9.1.530"
 }
 
 processResources {
