changed config system to carbon config

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ repositories{
     }
     maven { url "https://maven.shedaniel.me" }
     maven {
+        url = "https://api.modrinth.com/maven"
+    }
+    maven {
         url "https://cursemaven.com"
     }
 }
@@ -44,6 +47,7 @@ dependencies {
 //    modImplementation("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
 //    modImplementation("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
     modImplementation("curse.maven:jei-238222:4712866")
+    modImplementation(include("maven.modrinth:carbon-config:l6LTuPIs"))
     //modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-forge:${rootProject.rei_version}"
     //modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-plugin-compatibilities-forge:9.1.530"
 }
