--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
-loom.platform=forge
 
-mod_version=2.0.5
+mod_version=2.0.6
+mod_id=advanced_solars
 minecraft_version=1.19.2
 mappings_version=2022.10.09
 forge_version=43.1.34
